# crisp_contact_decomposition

./: .clang-format  .clang-tidy  .gitignore  Dockerfile  README.md  dependency.repos  docker-compose.yml  entrypoint.sh
.devcontainer/: devcontainer.json
contact_decomp_controller/: CMakeLists.txt  package.xml
contact_decomp_controller/src/: contact_decomp_controller.yaml
contact_decomp_demos/: package.xml  setup.py
contact_decomp_demos/config/fr3/: controllers.yaml
contact_decomp_demos/examples/: 00_item_pickup.py  01_figure_eight.py  operational_space_controller.yaml
contact_decomp_demos/launch/: franka.launch.py
docs/: installation.md
src/contact_decomp_controller/: CMakeLists.txt  contact_decomp_controller.xml  package.xml
src/contact_decomp_controller/include/contact_decomp_controller/: contact_decomp_controller.hpp  pch.hpp
src/contact_decomp_controller/src/: contact_decomp_controller.cpp  contact_decomp_controller.yaml
src/contact_decomp_controller/tests/: test_contact_decomp_controller.cpp
src/contact_decomp_demos/: setup.cfg  setup.py
src/contact_decomp_demos/config/teleop/: follower_teleop.yaml  leader_teleop.yaml
src/contact_decomp_demos/contact_decomp_demos/: target_publisher.py
src/contact_decomp_demos/examples/: 02_force_application.py  03_teleop.py  operational_space_controller.yaml
src/contact_decomp_demos/launch/: dual_franka.launch.py  franka.launch.py
